--- a/workbench/index.css
+++ b/workbench/index.css
@@ -11,6 +11,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+h3 {
+  text-align: center;
+}
+
 .App {
   width: 100%;
   height: 100%;
