--- a/workbench/index.css
+++ b/workbench/index.css
@@ -31,11 +31,26 @@ canvas {
   height: 128px;
 }
 
-#copy-svg {
+#buttons {
   position: absolute;
   right: 0px;
+}
+#copy-svg {
   top: 0px;
   width: 180px;
+  height: 40px;
+  margin: 0px;
+  z-index: 10;
+  font-size: 18px;
+  border-radius: 10px;
+  outline: none;
+  border: thin solid rgb(180, 180, 180);
+  cursor: pointer;
+}
+
+#play-pause {
+  top: 50px;
+  width: 40px;
   height: 40px;
   margin: 10px;
   z-index: 10;
@@ -44,4 +59,5 @@ canvas {
   outline: none;
   border: thin solid rgb(180, 180, 180);
   cursor: pointer;
+  font-weight: bolder;
 }
